--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
     </div>
     <footer>
         <p>© 2015 Axure Themes</p>
+        <p>This website developed by experywow</p>
     </footer>
     <div class="mobile__menu">
         <div class="cls-btn">
