--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         </div>
     </div>
     <footer>
-        <p>© 2015 Axure Themes</p>
+        <p>© 2015 Axure Themes.</p>
         <p>This website developed by experywow</p>
     </footer>
     <div class="mobile__menu">
